--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/swiper/swiper.min.css",
               "src/styles.scss"
             ],
             "scripts": []
