--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,27 @@
               ],
               "outputHashing": "all"
             },
+            "stag": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stag.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
@@ -80,6 +101,9 @@
           "configurations": {
             "production": {
               "browserTarget": "platzi-store:build:production"
+            },
+            "stag": {
+              "browserTarget": "platzi-store:build:stag"
             },
             "development": {
               "browserTarget": "platzi-store:build:development"
